--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "dependencies": {
     "express": "^4.13.1",
     "express-handlebars": "^2.0.1",
-    "handlebars": "^3.0.3"
+    "handlebars": "^3.0.3",
+    "cucumber": "^0.5.2"
   },
   "devDependencies": {
     "connect": "^3.4.0",
-    "cucumber": "^0.5.2",
     "serve-static": "^1.10.0",
     "web-terminal": "^0.7.0"
   }
